src/objects/icrt__Guide_Attributes_Translation__c.object
<CustomObject>
    <description>This class represents a guide&apos;s attributes translation.</description>
    <fields>
        <fullName>icrt__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>icrt__Guide_Definition__c</fullName>
        <label>Guide</label>
        <referenceTo>icrt__Guide_Definition__c</referenceTo>
        <relationshipLabel>Guide Translation</relationshipLabel>
        <relationshipName>Guide_Translation</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>icrt__Language__c</fullName>
        <label>Language</label>
        <length>2</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Guide Attributes Translation</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Guide Attributes Translations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>